[package]
name = "dragonkeep"
version = "0.6.0"
edition = "2024"
description = "Defensive security, threat defense & response platform — Community Edition — 18 engines including Shield (MDR + Phantom Memory bridge), Patrol (continuous monitoring), Proof (compliance audit binder), Respond (SOAR playbooks), Honeypot (active deception), Swarm (multi-host federation), and Oracle (threat intel feeds) on top of the existing 11."
license = "MIT"
authors = ["Ryan Sebastian <ryan@ghosts.lk>"]
repository = "https://github.com/Ghosts-Protocol-Pvt-Ltd/DragonKeep"
keywords = ["security", "mdr", "compliance", "soar", "deception"]
categories = ["command-line-utilities", "os"]
readme = "README.md"

[[bin]]
name = "dragonkeep"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "color", "env"] }
ratatui = "0.30"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sysinfo = "0.33"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
colored = "3"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"], default-features = false }
notify = "7"
dirs = "6"
glob = "0.3"
uuid = { version = "1", features = ["v4"] }
tabled = "0.18"
ring = "0.17"
base64 = "0.22"
regex = "1"
sha2 = "0.10"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", features = ["fs", "process", "signal", "net", "sched"] }
libc = "0.2"

# Linux-only eBPF stack — enable with `--features ebpf`
[target.'cfg(target_os = "linux")'.dependencies]
libbpf-rs = { version = "0.24", optional = true }
plain     = { version = "0.2", optional = true }

[target.'cfg(target_os = "linux")'.build-dependencies]
libbpf-cargo = { version = "0.24", optional = true }

# Windows-only ETW stack — enable with `--features etw`
[target.'cfg(target_os = "windows")'.dependencies]
ferrisetw = { version = "1", optional = true }

[features]
default = []
ebpf = ["dep:libbpf-rs", "dep:plain", "dep:libbpf-cargo"]
etw  = ["dep:ferrisetw"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
